--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
   %head
     // page title
     %title
-      = 'App'
+      = 'Switch Viewer'
 
     // meta
     %meta{'http-equiv' => "Content-type", :content => "text/html;charset=UTF-8"}
@@ -18,8 +18,7 @@
   %body
     %div#header
       %div#title
-        %a{:href => "/"}= 'App'
-      %div#tagline= 'App Description'
+        %a{:href => "/"}= 'TOWSER'
 
     %div#content
       = yield
