--- a/views/layout.haml
+++ b/views/layout.haml
@@ -18,7 +18,7 @@
   %body
     %div#header
       %div#title
-        %a{:href => "/"}= 'TOWSER'
+        %a{:href => "/"}= 'NETWORK DATA'
 
     %div#content
       = yield
