--- a/views/all.haml
+++ b/views/all.haml
@@ -10,13 +10,12 @@
     %th acceptable_frame_type
     %th permission
     %th vlan
+    %th switchport mac address
     %th machine interface
-    %th machine mac address
     %th machine member
     %th machine slaves
     %th machine active_interface
     %th machine active in bond
-    %th mac address
     %th machine hostname
   - SecondView.all.each do |row|
     %tr
@@ -30,11 +29,10 @@
       %td= row.acceptable_frame_type
       %td= row.permission
       %td= row.vlan
+      %td= row.mac
       %td= row.interface
-      %td= row.mac_address
       %td= row.member
       %td= row.slaves
       %td= row.active_interface
       %td= row.active_in_bond
-      %td= row.mac
       %td= row.machine_hostname
