--- a/views/all.haml
+++ b/views/all.haml
@@ -25,6 +25,7 @@
   - old_interface        = nil
   - alternate_background = false
 
+  // FIXME: should order by machine hostname after network/switch/port
   // FIXME: refactor this craziness..
   - SecondView.all.each do |row|
 
